# PE_analisator

./: CMakeLists.txt  PE64FILE.cpp  PE64FILE.h  PEFILE.cpp  PEFILE.h  custom_structs.h  main.cpp  winntdef.h
